# libwasm-vulnerable

./: .gitignore  CMakeLists.txt  README.md  lgtm.yml
afl-2.49b/: .gdb_history
fuzzers/: CMakeLists.txt  FuzzLibwasm.cpp  gen_coverage.sh
lib/: ArrayList.c  CMakeLists.txt  libwasm.c  libwasm.h  utils.c  utils.h
test_data/: sample.wasm
